# mdapy

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  Readme.md  ReadmeChinese.md  ReleaseNotes.rst  __init__.py  add_copyright.py  check.py  compile.py  compile.sh  core.py  install.py  lattice_maker.py  make_fortran.py  pyproject.toml  requirements.txt  requirements.yml  run_tests.sh  setup.py  test.py
.github/workflows/: build_wheels.yml  publish.yml  python-publish.yml  tests.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
benchmark/: buildlattice_mdapy_freud.ipynb  buildlattice_mdapy_freud.py  buildneighbor_mdapy_freud.py  cluster_mdapy_ovito.py  csp_mdapy_ovito.py  entropy_mdapy_ovito.py  rdf_mdapy_freud.py  time_list_cpu_build_lattice.txt  time_list_cpu_cluster.txt  time_list_cpu_csp.txt  time_list_cpu_entropy.txt  time_list_cpu_neighbor.txt  time_list_cpu_rdf.txt  time_list_gpu_build_lattice.txt  time_list_gpu_entropy.txt  time_list_gpu_neighbor.txt
benchmark/Identify_SFs_TBs/: SFTB_mdapy_ovito.py
benchmark/aja/: aja_mdapy_ovito.py
benchmark/atomic_entropy/: entropy_mdapy_ovito.py
benchmark/average_rdf/: rdf_benchmark.gsd  rdf_mdapy_mdanalysis_mdtraj.py
benchmark/cluster/: cluster_mdapy_ovito.py
benchmark/cna/: cna_mdapy_ovito.py
benchmark/csp/: csp_mdapy_ovito.py
benchmark/lattice_maker/: latticemaker_mdapy_freud.py
benchmark/msd/: msd_mdapy_mdanalysis_mdtraj.py
benchmark/neighbor/: neighbor_mdapy_ovito_freud.py
benchmark/neighbor_threads/: neighbor_thread.py
benchmark/pair_distribution/: pair_mdapy_ovito_freud.py
benchmark/polyhedra_template_match/: ptm_mdapy_ovito.py
benchmark/steinhardt_order/: steinhardt_mdapy_freud.py
binning/: one_binning.py
compute_entropy/: entropy_p.cp37-win_amd64.pyd  entropy_p.f90
compute_entropy/bak/: compute_entropy.py
compute_neighbor/: error.txt  neigh_cell_p.cp37-win_amd64.pyd  neigh_cell_p.f90
compute_neighbor/bak/: neigh_cell_serial.f90  neigh_verlet_parallel.f90  neigh_verlet_serial.f90
compute_solid/: compute_solid.py
compute_temperature/: temperature_p.cp37-win_amd64.pyd  temperature_p.f90
compute_temperature/bak/: temperature_s.f90
compute_wcp/: wcp.py  wcp_s.cp37-win_amd64.pyd  wcp_s.f90
doc/: .readthedocs.yaml  build_doc.sh  conf.py  environment.yml  index.rst  readthedocs-env.yml  regen_api.sh  releasenotes.rst  requirements.txt
doc/gettingstarted/: atomic_structure_generation.ipynb  benchmark.ipynb  eam_analysis.ipynb  elastic_constant.ipynb  installation.rst  load_save.ipynb  phonon_calculation.ipynb  render_structure.ipynb  use_mdapy_efficiently.ipynb
doc/source/: conf.py  index.rst  mdapy.rst  modules.rst  robots.txt
example/: Al-heat.in  Al_DFT.eam.alloy  CoCuFeNiPd-4M.data  CoCuFeNiPd-4M.dump  CoCuFeNiPd-4M.output.dump  CoNiFeAlCu.eam.alloy  CubicDiamond.xyz  FCC.data  ISF.output.dump  ISFsTBs.py  analyze_trajectories.py  calculate_eos.ipynb  calculate_eos.py  carbon.pb  create_polycrystalline.py  eos_plot.ipynb  example.ipynb  example.md  example.py  ffield.reax.GR-RDX-2021  get_WCP.py  lmp_control  solidliquid.output.dump  solidliquid.py  test.dump  test.output.dump  test1.dump  test1.output.dump  test_cpp_module.py  test_lammps_interface.py
lattice_maker/: lattice_maker.py
mdapy/: __init__.py  __main__.py  ackland_jones_analysis.py  atomic_strain.py  bond_analysis.py  box.py  calculator.py  cell_opt.py  centro_symmetry_parameter.py  cluser_analysis.py  common_neighbor_analysis.py  common_neighbor_parameter.py  create_polycrystalline.py  dft2nepxyz.py  eam_average.py  eam_generate.py  elastic.py  entropy.py  identify_SFs_TBs.py  identify_diamond_structure.py  kdtree.py  lattice_maker.py  lindemann_parameter.py  load_save_data.py  main.py  mean_squared_displacement.py  minimizer.py  nearest_neighbor.py  neighbor.py  orthogonal_box.py  pair_distribution.py  perturb_model.py  phonon.py  pigz.py  plotset.py  polyhedral_template_matching.py  potential.py  replicate.py  spatial_binning.py  steinhardt_bond_orientation.py  (+8 more)
mdapy/cluster/: _cluster.cpp  _cluster_analysis.cp37-win_amd64.pyd  cluster.hpp  (+3 more)
plot/: pltset.py
read_dump/: dump.py
screen_output/: custom_print.py
src/: TachyonOptiX.cu  TachyonOptiX.h  aabb_tree.cpp  aabb_tree.h  ackland_jones_analysis.cpp  adaptive_common_neighbor_analysis.py  atomic_strain.cpp  atomic_temperature.cpp  bond_analysis.cpp  box.h  build_bond.cpp  calculator.py  centro_symmetry_parameter.cpp  centro_symmetry_parameter.py  centro_symmetry_parameter_nearest.py  chill_plus.cpp  cluser_analysis.py  cluster.cpp  cna.cpp  common_neighbor_analysis.py  common_neighbor_parameter.cpp  create_polycrystalline.py  eam.cpp  eam.h  eam_average.py  eam_generate.py  entropy.py  fast_knn.cpp  identify_fcc_planar_faults.cpp  io.py  kdtree.py  lattice_maker.py  lindemann.cpp  lindemann_parameter.py  mean_squared_displacement.py  neighbor.cpp  neighbor.py  neppy.cpp  pair_distribution.py  polycrystal.cpp  (+26 more)
tests/: _fixture_helper.py  bench_nearest_neighbor.py  conftest.py  test_PCA.py  test_ackland_jones_analysis.py  test_angular_distribution_function.py  test_atomic_strain.py  test_atomic_temperature.py  test_average_neighbor.py  test_bond_analysis.py  test_bond_stiffness.py  test_build_bond.py  test_build_crystal.py  test_centro_symmetry_parameter.py  test_chemical_species.py  test_chill_plus.py  test_common_neighbor_analysis.py  test_common_neighbor_parameter.py  test_eam.py  test_elastic_constant.py  test_identify_diamond.py  test_identify_fcc_planar_faults.py  test_io_lammps.py  test_io_mp.py  test_io_poscar.py  test_io_trajectory.py  test_io_xyz.py  test_lammps_potential.py  test_lindemann_parameter.py  test_md_elastic.py  test_minimize.py  test_msd.py  test_nearest_neighbor.py  test_neighbor_cutoff.py  test_nep.py  test_orthogonal_cell.py  test_polyhedral_template_matching.py  test_qha_elastic.py  test_qnep.py  test_radial_distribution_function.py  (+15 more)
timer/: timer.py
tools/: binning.py  build_voronoi_graphene_metal.py  one_binning.py  sort.py  timer.py  two_binning.py
write_dump/: write.py
(+254 files in other folders)
